--- a/webapp/dev.ini
+++ b/webapp/dev.ini
@@ -29,6 +29,13 @@ website.adyen.skinCode=6agGJOyq
 website.adyen.secret=PaulaAbnormal
 website.adyen.url=https://test.adyen.com/hpp/pay.shtml
 
+
+website.worldpay.installationId=301925
+website.worldpay.testMode=100
+website.worldpay.url=https://secure-test.worldpay.com/wcc/purchase
+
+
+
 admin.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
 reports.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
 reports.reports.1.slug = sales
