--- a/webapp/live.ini
+++ b/webapp/live.ini
@@ -28,8 +28,10 @@ website.adyen.skinCode=6agGJOyq
 website.adyen.secret=PaulaAbnormal
 website.adyen.url=https://test.adyen.com/hpp/pay.shtml
 
+
 website.worldpay.installationId=301925
-website.worldpay.url=https://secure-test.worldpay.com/wcc/purchase
+website.worldpay.testMode=0
+website.worldpay.url=https://secure.worldpay.com/wcc/purchase
 
 admin.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
 reports.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
