--- a/webapp/local.ini
+++ b/webapp/local.ini
@@ -29,6 +29,7 @@ website.adyen.secret=PaulaAbnormal
 website.adyen.url=https://test.adyen.com/hpp/pay.shtml
 
 website.worldpay.installationId=301925
+website.worldpay.testMode=100
 website.worldpay.url=https://secure-test.worldpay.com/wcc/purchase
 
 admin.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
