things and wordpress and payment single credit option

--- a/webapp/local.ini
+++ b/webapp/local.ini
@@ -72,6 +72,7 @@ use = egg:PasteDeploy#prefix
 [pipeline:main]
 pipeline =
         paste_prefix
+        egg:WebError#evalerror
         larryslist
 
 [server:main]
