redeploying dev against live api

--- a/webapp/dev.ini
+++ b/webapp/dev.ini
@@ -14,12 +14,11 @@ pyramid.available_locales = en
 
 deploy.website = True
 deploy.admin = True
-deploy.reports=True
-
+deploy.reports = True
 deploy.secure_scheme = https
 deploy.upload_url = /api/0.0.1/admin/resources
-deploy.resource_host = res.dev.bookpar.com
-deploy.api.url = https://dev.api.bookpar.com
+deploy.resource_host = res.live.canoecarinthia.com
+deploy.api.url = https://live.api.canoecarinthia.com
 deploy.api.version = 0.0.1
 
 website.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
@@ -34,14 +33,12 @@ website.worldpay.installationId=301925
 website.worldpay.testMode=100
 website.worldpay.url=https://secure-test.worldpay.com/wcc/purchase
 
-
-
 admin.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
 reports.backendToken = E8B70A38-7F67-46F4-ABC7-287BB83346C0
 reports.reports.1.slug = sales
 reports.reports.1.name = Sales Overview
 reports.reports.1.icon = icon-bar-chart
-reports.reports.1.url = http://dev.reports.bookpar.com/sales.aspx
+reports.reports.1.url = http://dev.reports.canoecarinthia.com/sales.aspx
 
 email.host=smtp.gmail.com
 email.user=info@gymondo.de
